@@ -5,6 +5,6 @@
 	<description>An RSS/Atom feed reader. Requires the App Framework app and backgroundjobs need to be enabled. See the README.rst in the apps top directory</description>
 	<licence>AGPL</licence>
 	<author>Alessandro Cosentino, Bernhard Posselt, Jan-Christoph Borchardt. Powered by SimplePie (Ryan Parman, Geoffrey Sneddon, Ryan McCue and contributors).</author>
-	<version>0.102</version>
+	<version>0.103</version>
 	<require>5.0.6</require>
 </info>
